--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  name: MyString
+  author: MyString
+  abstract: MyString
+  numberOfPages: 1
+  publisher: MyString
+
+two:
+  name: MyString
+  author: MyString
+  abstract: MyString
+  numberOfPages: 1
+  publisher: MyString
